--- a/musicaapp/templates/core/playlists.html
+++ b/musicaapp/templates/core/playlists.html
@@ -171,15 +171,12 @@
 
 <div id="minhaDiv" style="color:#fff"></div>
 
-<div class="fluid-container mb-4 d-flex justify-content-center align-items-center flex-column text-center w-100" style="border-top:solid 2px rgb(54, 218, 54);">
+<div class="d-none fluid-container mb-4 d-flex justify-content-center align-items-center flex-column text-center w-100" style="border-top:solid 2px rgb(54, 218, 54);">
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
-<a id="meuBotao" href="{%url 'bonus'%}" class="mb-2 mt-5">
-    <img style="height:4rem; border-radius:500px;" src="{%static 'img/Untitled_design__17_-removebg-preview (1) (1).png' %}">
-</a>
 <div id="temporizador" style="color:#fff;"></div>
 
 <script>
@@ -466,7 +463,7 @@ document.getElementById('prev').addEventListener('click', () => {
             elapsedTime: elapsedTime,
             saldoUser: saldoUser,
         };
-        fetch('https://musicaapp.onrender.com/update_data/', {
+        fetch('/update_data/', {
 
                     method: 'POST',
             headers: {
