--- a/musicaapp/static/css/home2.css
+++ b/musicaapp/static/css/home2.css
@@ -13,6 +13,30 @@
     font-family: 'Montserrat' !important;
 }
 
+.notification {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    color: white;
+    padding: 20px;
+    border-radius: 5px;
+    display: none;
+    animation: fadeInUp 2s;
+  }
+  
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translate3d(0, 30px, 0);
+    }
+  
+    to {
+      opacity: 1;
+      transform: none;
+    }
+  }
+
 .detalhe1
 {
     top:0;
