--- a/musicaapp/templates/core/playlists2.html
+++ b/musicaapp/templates/core/playlists2.html
@@ -14,7 +14,7 @@
 
     <header  class="fluid-container p-3 d-flex w-100 justify-content-center text-center justify-content-between" style="background:#000 !important;">
         <div class="d-flex mobile-flex align-items-center" style="gap:.5rem">
-        <a id="meuBotao3"><img style="height:2rem;" src="{%static 'img/Untitled_design__14_-removebg-preview (1).png' %}"> </a> 
+        <a id="meuBotao3" ><img style="height:2rem;" src="{%static 'img/Untitled_design__14_-removebg-preview (1).png' %}"> </a> 
         
         <div id="temporizador1" style="color:#fff;"></div>
 <script>
@@ -72,13 +72,50 @@
     <span style="color:#fff;" class="mt-5">Olá {{user.username}}    </span>
    
 -->
-
+<div id="notification" class="notification"></div>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const nomes = [
+        "Antônio", "Carlos", "Carla", "João", "Maria", "José", "Ana", 
+        "Lucas", "Paula", "Marcos", "Sofia", "Tiago", "Juliana", "Roberto", 
+        "Fernanda", "Felipe", "Amanda", "Rafael", "Patrícia", "Eduardo", 
+        "Camila", "Gabriel", "Daniela", "Bruno", "Alice", "Gustavo", 
+        "Mariana", "Leonardo", "Fernanda", "Mateus", "Larissa", "Henrique", 
+        "Aline", "Caio", "Sílvia", "Vinícius", "Beatriz", "André", 
+        "Cláudia", "Diego", "Caroline", "Alex", "Vanessa", "Luciano", 
+        "Tatiane", "Marcelo", "Priscila", "Ricardo", "Isabela", "César", 
+        "Érica", "Rodrigo", "Renata", "Guilherme", "Bianca", "Sérgio", 
+        "Cristiane", "Fábio", "Sabrina", "Túlio", "Lívia", "Ígor", 
+        "Jéssica", "Lauro", "Manuela", "Tomás", "Viviane"
+    ]; 
+        const notificationElement = document.getElementById('notification');
+      
+        function mostrarNotificacao() {
+          const nomeAleatorio = nomes[Math.floor(Math.random() * nomes.length)];
+          const valorAleatorio = Math.floor(Math.random() * 1000) + 100;
+          notificationElement.innerHTML = `${nomeAleatorio} acabou de sacar R$ ${valorAleatorio}`;
+          notificationElement.style.display = 'block';
+          
+          // Reaplica a animação
+          notificationElement.classList.remove('notification');
+          void notificationElement.offsetWidth; // trigger reflow
+          notificationElement.classList.add('notification');
+      
+          setTimeout(() => {
+            notificationElement.style.display = 'none';
+          }, 2000); // Esconde após 2 segundos
+        }
+      
+        setInterval(mostrarNotificacao, 4000); // Muda a notificação a cada 4 segundos para dar tempo ao fade
+      });
+</script>
 <div class="container d-flex justify-content-center flex-column align-items-center">
-    <span class="d-none text-center mt-4 mb-3" style="color:#fff; font-size:1.2rem">Temporizador: <span class="timer">0</span></span> 
+    <span class="d-flex text-center mt-4 mb-3" style="color:#fff; font-size:1.2rem">Temporizador: <span class="timer">0</span></span> 
+
 
     <span class="text-center mt-5 mb-5" style="color:#fff; font-size:1rem">Ouça para aumentar seu saldo!</span> 
  
-
+ 
     <div class="d-none">
     <span>{{user.username}}</span>
     {% if user.is_authenticated %}
@@ -90,7 +127,7 @@
 
 </div>
 
-   <span class="text-center mb-2" style="color:#fff; font-size:1rem">Uau, olha só quanto você ja ganhou...</span> 
+   <span class="text-center mb-2" style="color:#fff; font-size:1rem">Uau, olha só quanto você ja ganhou hoje...</span> 
   
     <div class="progress-bar" style="width:30rem; position: relative; height: .5rem; background: rgb(193, 190, 190);">
     <span class="inner-bar" style="  position:absolute; background: rgb(33, 149, 33); height: 100%; left:0; top:0;"></span></div>
@@ -98,10 +135,9 @@
 <div class="d-flex align-items-center justify-content-center mt-2" style="gap:.5rem">    <img style="height:1.4rem" src="{%static 'img\moedas (1).png' %}">
     <span class="text-center" style="color:#fff; font-size:1.2rem"> R$ <span class=" saldo" style="color:#fff; font-size:1.2rem">{{ user.saldo|floatformat:2 }}</span> </span>  </div>
 <div class="container d-flex justify-content-center align-items-center mt-5">
-    <a class="mb-4" href="https://checkout.perfectpay.com.br/pay/PPU38CO5I3G?src=two"> <button class="p-3" style="background:#000; font-weight:600; box-shadow:3px 3px #4aff52; color:#fff; outline:none; border:none; border-radius:30px; font-size:1.2rem; font-family: 'Montserrat'">RECEBA EM DOBRO </button></a>
-
-<button class="dobroBtn" style="display: none; background: rgb(255, 238, 238); padding:.7rem 2rem; font-size:2rem; border-radius:30px; outline: none; border: none; box-shadow: rgb(117, 255, 117) 5px 5px;">SAQUE EXPRESS</button>
-
+<a href="https://checkout.perfectpay.com.br/pay/PPU38CO5I31?src=one" class="d-flex w-100 justify-content-center">
+<button class="dobroBtn1 p-3" style="background:#000; font-weight:600; box-shadow:3px 3px #4aff52; color:#fff; outline:none; border:none; border-radius:30px; font-size:1.2rem; font-family: 'Montserrat'">SAQUE EXPRESSO</button>
+</a>
 </div>
 
 <div class="container mt-3 mb-5">
@@ -161,13 +197,31 @@
 
     <div class="container d-flex flex-column align-items-center text-center p-3" style="background:#fff; border-radius:12px; max-width: 50rem; width: 90%;">
 
-        <span style="font-size:1.2rem">Você precisar atingir a meta de <span class="fw-bold" style="color:green">R$3000,00</span> para sacar!</span>
-
+        <span style="font-size:1.2rem">Para efetuar seu primeiro saque você precisa atingir a meta de<wbr> <span style="color:green">6 mil</span> ou saque imediatamente via pix, pagando a taxa de saque expresso </span>
+        <a href="https://checkout.perfectpay.com.br/pay/PPU38CO5I31?src=one" class="mt-3 d-flex w-100 justify-content-center">
+            <button class="dobroBtn1 p-3" style="background:#000; font-weight:600; box-shadow:3px 3px #4aff52; color:#fff; outline:none; border:none; border-radius:30px; font-size:1.2rem; font-family: 'Montserrat'">SAQUE EXPRESSO</button>
+            </a>
 
     </div>
     
 </div>
 
+
+<div class="limiteContainer jusity-content-center align-items-center flex-column justify-content-center" style="position: fixed; height: 100%; z-index:9999; width: 100%; background:rgba(0, 0, 0, 0.45); display: none; top:0;">
+
+    <div class="container d-flex flex-column align-items-center text-center p-3" style="background:#fff; border-radius:12px; max-width: 50rem; width: 90%;">
+
+        <span style="font-size:1.2rem">Seu limite mensal é de <span style="color:green">R$700,00</span>  para continuar ganhando sem limites e alcançar a meta  para realizar o seu primeiro saque, adquiria o acesso premium do seu aplicativo por R$39,90 e realize seu saque nas próximas horas</span>
+        <a href="https://checkout.perfectpay.com.br/pay/PPU38CO5I31?src=one" class="mt-3 d-flex w-100 justify-content-center">
+            <button class="dobroBtn1 p-3" style="background:#000; font-weight:600; box-shadow:3px 3px #4aff52; color:#fff; outline:none; border:none; border-radius:30px; font-size:1.2rem; font-family: 'Montserrat'">SAQUE EXPRESSO</button>
+            </a>
+
+    </div>
+    
+</div>
+
+
+</div>
 
 <div id="minhaDiv" style="color:#fff"></div>
 
@@ -177,8 +231,24 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
-
 <div id="temporizador" style="color:#fff;"></div>
+
+<script>
+novoContainer = document.querySelector('.novoContainer')
+saqueBtn = document.querySelector('#meuBotao3')
+saqueBtn.addEventListener('click', function(){
+    novoContainer.style.display = 'flex'
+})
+novoContainer.addEventListener('click', function(event)
+{
+    event.stopPropagation()
+    if(event.target === this)
+    {
+        this.style.display = 'none'
+    }
+})
+</script>
+
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         const botao = document.getElementById('meuBotao');
@@ -251,35 +321,67 @@
                 const currentDate = new Date();
     const timeDifference = currentDate - lastIncreaseDate;
 
-    // Função que será chamada para verificar o tempo e atualizar o saldo
-function checkAndUpdateSaldo() {
-    const currentDate = new Date();
-    const lastIncreaseTime = localStorage.getItem('lastIncreaseTime');
-    const timeDifference = lastIncreaseTime ? currentDate - new Date(lastIncreaseTime) : Infinity;
-
-    // Verifica se já passaram 24 horas
-    if (timeDifference > 24 * 60 * 60 * 1000) {
-        // Reseta o contador diário e salva o timestamp atual
-        localStorage.setItem('lastIncreaseTime', currentDate.toISOString());
-        dailyIncrease = 0;
-    } else {
-        // Se não passaram 24 horas, verifica se a contagem pode continuar
-        let dailyIncrease = parseInt(localStorage.getItem('dailyIncrease') || '0');
-        
-        // Aumenta o saldoUser apenas se o aumento diário for menor que 100
-        if (dailyIncrease < 100) {
-            // Suponha que `saldoUser` seja uma variável persistida no localStorage
-            saldoUser += 1;
-            dailyIncrease += 1;
-            
-            // Atualiza o saldoUser e o dailyIncrease no localStorage
-            localStorage.setItem('dailyIncrease', dailyIncrease.toString());
+    function checkAndUpdateSaldo() {
+        const currentDate = new Date();
+        const lastIncreaseTime = localStorage.getItem('lastIncreaseTime');
+        const timeDifference = lastIncreaseTime ? currentDate - new Date(lastIncreaseTime) : Infinity;
+    
+        // Verifica se já passaram 24 horas
+        if (timeDifference > 24 * 60 * 60 * 1000) {
+            // Reseta o contador diário e salva o timestamp atual
+            localStorage.setItem('lastIncreaseTime', currentDate.toISOString());
+            dailyIncrease = 0;
+        } else {
+            // Se não passaram 24 horas, verifica se a contagem pode continuar
+            let dailyIncrease = parseInt(localStorage.getItem('dailyIncrease') || '0');
+    
+            // Primeiro, verifica se o saldoUser já está no limite ou se o incremento vai ultrapassar o limite
+            if (saldoUser >= 700) {
+                // Mostra o popup de limite atingido e para a execução
+                showLimitePopup();
+            } else if (saldoUser + 1 > 700) { // Verifica se o próximo incremento ultrapassaria o limite
+                // Atualiza o saldo para o limite e mostra o popup
+                saldoUser = 700;
+                localStorage.setItem('saldoUser', saldoUser.toString()); // Assume que você armazena o saldo no localStorage
+                showLimitePopup();
+            } else if (dailyIncrease < 300) {
+                // Procede com o aumento normal, garantindo que não ultrapassará o limite de 700
+                saldoUser += .5; // Este incremento é seguro, dado que as condições acima garantem que não ultrapassaremos 700
+                dailyIncrease += 1;
+                
+                // Atualiza o saldoUser e o dailyIncrease no localStorage
+                localStorage.setItem('saldoUser', saldoUser.toString());
+                localStorage.setItem('dailyIncrease', dailyIncrease.toString());
+            } else {
+                // Se o aumento diário já atingiu 300, mostra o popup
+                showLimitePopup();
+            }
         }
     }
-}
+    
+    function showLimitePopup() {
+        document.querySelector('.limiteContainer').style.display = 'flex';
+        document.querySelector('.limiteContainer').addEventListener('click', function(event) {
+            if (event.target === this) {
+                event.stopPropagation();
+                this.style.display = 'none';
+            }
+        });
+    }
+    
+    // Não esqueça de atualizar o saldo na interface do usuário sempre que ele mudar
+    function updateSaldoUI() {
+        saldoSpans.forEach(span => span.textContent = `R$ ${saldoUser.toFixed(2)}`);
+    }
+    
+    // E chame `updateSaldoUI()` onde for apropriado, por exemplo, após modificar o saldo
+    
+    // Chame a função quando necessário
+    checkAndUpdateSaldo();
+    
+    
 
-// Chame a função quando necessário
-checkAndUpdateSaldo();
+
             
                 // Formata o saldo para sempre ter 1 dígito antes e 2 dígitos depois da vírgula
                 let saldoFormatado = formatarSaldo(saldoUser);
@@ -397,22 +499,16 @@ document.getElementById('prev').addEventListener('click', () => {
 
 });
         </script>
-
-        <script>
-            novoContainer = document.querySelector('.novoContainer')
-            saqueBtn = document.querySelector('#meuBotao3')
-            saqueBtn.addEventListener('click', function(){
-                novoContainer.style.display = 'flex'
-            })
-            novoContainer.addEventListener('click', function(event)
-            {
-                event.stopPropagation()
-                if(event.target === this)
-                {
-                    this.style.display = 'none'
-                }
-            })
-            </script>
+        <div class="notificacaoContainer justify-content-center align-items-center flex-column " style="position: fixed; height: 100%; z-index:9999; width: 100%; background:rgba(0, 0, 0, 0.45); display: none; top:0;">
+            <div class="container d-flex flex-column align-items-center text-center p-3" style="background:#fff; border-radius:12px; max-width: 50rem; width: 90%;">
+                <span style="font-size:1.2rem">Você acaba de ganhar <span class="fw-bold" style="color:green">R$400,00</span> para começar, aproveite! </span>
+                <a href="https://checkout.perfectpay.com.br/pay/PPU38CO5I31?src=one" class="mt-4 d-flex w-100 justify-content-center">
+                    <button class="dobroBtn1 p-3" style="background:#000; font-weight:600; box-shadow:3px 3px #4aff52; color:#fff; outline:none; border:none; border-radius:30px; font-size:1.2rem; font-family: 'Montserrat'">SAQUE AGORA</button>
+                    </a>
+            </div>
+        </div>
+        
+       
 <script type="text/javascript">
     window.onload = function() {
         let dobroBtn = document.querySelector('.dobroBtn');
