--- a/musicaapp/templates/core/playlists.html
+++ b/musicaapp/templates/core/playlists.html
@@ -89,24 +89,21 @@
         "Jéssica", "Lauro", "Manuela", "Tomás", "Viviane"
     ];        const notificationElement = document.getElementById('notification');
       
-    function mostrarNotificacao() {
-        const nomeAleatorio = nomes[Math.floor(Math.random() * nomes.length)];
-        const valorAleatorio = Math.floor(Math.random() * 1000) + 100;
-        notificationElement.innerHTML = `${nomeAleatorio} acabou de sacar R$ ${valorAleatorio}`;
-        notificationElement.style.display = 'block';
-        
-        // Reaplica a animação
-        notificationElement.classList.remove('notification');
-        void notificationElement.offsetWidth; // trigger reflow para reiniciar a animação
-        notificationElement.classList.add('notification');
+        function mostrarNotificacao() {
+          const nomeAleatorio = nomes[Math.floor(Math.random() * nomes.length)];
+          const valorAleatorio = Math.floor(Math.random() * 1000) + 100;
+          notificationElement.innerHTML = `${nomeAleatorio} acabou de sacar R$ ${valorAleatorio}`;
+          notificationElement.style.display = 'block';
+          
+          // Reaplica a animação
+          notificationElement.classList.remove('notification');
+          void notificationElement.offsetWidth; // trigger reflow
+          notificationElement.classList.add('notification');
       
-        // Calcula um tempo de exibição aleatório entre 2 e 5 segundos
-        const tempoExibicao = Math.floor(Math.random() * (5000 - 2000 + 1)) + 2000;
-      
-        setTimeout(() => {
-          notificationElement.style.display = 'none';
-        }, tempoExibicao); // Esconde após um tempo aleatório entre 2 a 5 segundos
-      }
+          setTimeout(() => {
+            notificationElement.style.display = 'none';
+          }, 2000); // Esconde após 2 segundos
+        }
       
         setInterval(mostrarNotificacao, 4000); // Muda a notificação a cada 4 segundos para dar tempo ao fade
       });
@@ -503,9 +500,7 @@ document.getElementById('prev').addEventListener('click', () => {
         <div class="notificacaoContainer justify-content-center align-items-center flex-column " style="position: fixed; height: 100%; z-index:9999; width: 100%; background:rgba(0, 0, 0, 0.45); display: none; top:0;">
             <div class="container d-flex flex-column align-items-center text-center p-3" style="background:#fff; border-radius:12px; max-width: 50rem; width: 90%;">
                 <span style="font-size:1.2rem">Você acaba de ganhar <span class="fw-bold" style="color:green">R$400,00</span> para começar, aproveite! </span>
-                <a href="https://checkout.perfectpay.com.br/pay/PPU38CO5I31?src=one" class="mt-4 d-flex w-100 justify-content-center">
-                    <button class="dobroBtn1 p-3" style="background:#000; font-weight:600; box-shadow:3px 3px #4aff52; color:#fff; outline:none; border:none; border-radius:30px; font-size:1.2rem; font-family: 'Montserrat'">SAQUE EXPRESSO</button>
-                    </a>
+               
             </div>
         </div>
         
